# stm32f103c8t6_std_template

./: .clang-format  .gitignore  CMakeLists.txt  README.MD  openocd.cfg  stm32-toolchain.cmake
Src/: main.c  stm32f10x_it.c
